feat(notification-details): updated aws issue layout added aws_scheduled & aws_account layout types

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.css
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.css
@@ -1,3 +1,12 @@
+.header {
+    margin-bottom: 18px;
+    gap: 8px;
+}
+
+.header-icon {
+    width: 24px;
+}
+
 .issue-table {
     border-radius: 4px;
     box-shadow: 0 0 0 1px var(--border-200);
