--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/aws/issue-notification/issue-notification.component.html
@@ -1,4 +1,5 @@
-<div class="header flex">
+<div class="header flex body-1 high-emphasis">
+    <img class="header-icon" src="/assets/icons/aws-color.svg" />
     <div class="header-text">
         {{ title }}
     </div>
