--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -24,6 +24,7 @@
             <app-aws-issue-notification
                 *ngSwitchCase="LAYOUTTYPE.AWS_ISSUE"
                 [details]="notificationDetails"
+                [title]="eventName"
             ></app-aws-issue-notification>
             <!--./AWS ISSUE -->
 
