feat(notification-details): updated paladincloud violation view

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.html
@@ -1,3 +1,9 @@
+<div class="header flex body-1 high-emphasis">
+    <img class="header-icon" src="/assets/icons/paladin-logo.svg" />
+    <div class="header-text">
+        {{ title }}
+    </div>
+</div>
 <table class="violation-table body-1 high-emphasis">
     <tbody>
         <tr class="violation-parameter">
