--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -32,6 +32,7 @@
             <app-paladincloud-violation-notification
                 *ngSwitchCase="LAYOUTTYPE.PALADINCLOUD_VIOLATION"
                 [details]="notificationDetails"
+                [title]="eventName"
                 (navigateTo)="navigateTo($event)"
             >
             </app-paladincloud-violation-notification>
