feat(notification-details): updated keyvalue view css refactoring

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.css
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.css
@@ -1,3 +1,9 @@
+.header-icon {
+    font-size: var(--text-body-1-font-size);
+    height: var(--text-body-1-font-size);
+    width: var(--text-body-1-font-size);
+}
+
 .keyvalue-table {
     width: 100%;
 }
@@ -9,4 +15,3 @@
 .keyvalue-name {
     width: 20%;
 }
-
