--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.html
@@ -1,3 +1,9 @@
+<div class="header flex gap-8 body-1 high-emphasis">
+    <mat-icon class="header-icon">notifications</mat-icon>
+    <div class="header-text">
+        {{ title }}
+    </div>
+</div>
 <table class="keyvalue-table body-1 high-emphasis">
     <tbody>
         <tr class="keyvalue-parameter" *ngFor="let item of details | keyvalue">
