--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -42,6 +42,7 @@
             <app-keyvalue-notification
                 *ngSwitchCase="LAYOUTTYPE.KEYVALUE"
                 [details]="notificationDetails"
+                [title]="eventName"
             ></app-keyvalue-notification>
 
             <!-- JSON -->
