--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/paladincloud/violation-notification/violation-notification.component.html
@@ -1,4 +1,4 @@
-<div class="header flex body-1 high-emphasis">
+<div class="header flex gap-8 body-1 high-emphasis">
     <img class="header-icon" src="/assets/icons/paladin-logo.svg" />
     <div class="header-text">
         {{ title }}
