--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/redhat/acs-notification/acs-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/redhat/acs-notification/acs-notification.component.html
@@ -1,5 +1,5 @@
 <div class="acs-notification-container body-1 high-emphasis">
-    <div class="header flex">
+    <div class="header flex gap-8">
         <img class="header-icon" src="/assets/icons/redhat-color.svg" />
         <div class="header-text">
             {{ title }}
