feat(notification-details): moved ngx-json-viewer to json-notification component

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/keyvalue-notification/keyvalue-notification.component.html
@@ -1,5 +1,5 @@
 <div class="header flex gap-8 body-1 high-emphasis">
-    <mat-icon class="header-icon">notifications</mat-icon>
+    <mat-icon class="header-icon material-icons-outlined">notifications</mat-icon>
     <div class="header-text">
         {{ title }}
     </div>
