--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/notification-details.component.html
@@ -46,7 +46,12 @@
             ></app-keyvalue-notification>
 
             <!-- JSON -->
-            <ngx-json-viewer *ngSwitchDefault [json]="notificationDetails"> </ngx-json-viewer>
+            <app-json-notification
+                *ngSwitchDefault
+                [details]="notificationDetails"
+                [title]="eventName"
+            >
+            </app-json-notification>
             <!-- JSON -->
         </div>
         <!--./NOTIFICATION SWITCH -->
