feat(notification-details): made acs notification id clickable

--- a/webapp/src/app/pacman-features/modules/notifications/notification-details/redhat/acs-notification/acs-notification.component.html
+++ b/webapp/src/app/pacman-features/modules/notifications/notification-details/redhat/acs-notification/acs-notification.component.html
@@ -22,7 +22,9 @@
                 <td class="acs-name">Id</td>
 
                 <td class="acs-value">
-                    {{ details.id }}
+                    <a class="primary-400" [href]="details.goToViolation" target="_blank">
+                        {{ details.id }}
+                    </a>
                 </td>
             </tr>
 
