--- a/webapp/src/app/post-login-app/post-login-app.component.html
+++ b/webapp/src/app/post-login-app/post-login-app.component.html
@@ -3,49 +3,72 @@
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); You may not use
  * this file except in compliance with the License. A copy of the License is located at
- * 
+ *
  * http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * or in the "license" file accompanying this file. This file is distributed on
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, express or
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  -->
 
-<div class="pacman-logged-in-section" [class.is-offine]="isOffline" [ngStyle]="
-    theme !== undefined && { 'background-image': 'url(' + theme.bg + ')' }
-  ">
-  <section class="post-login-body" [@mainRouterTransition]="getState(o)">
-    <app-header></app-header>
-    <button class="sidenav-expander flex flex-center" mat-button (click)="sidenavExpanderClicked()"
-      [ngStyle]="{ 'left.px':sidenavExpanderLeft, 'transform': rotationVar}"><img
-        src="/assets/icons/Path.svg" /></button>
-    <mat-sidenav-container autosize [hasBackdrop]="false">
-      <mat-sidenav #sidenav [class.expanded-sidenav]="isExpanded" [class.collapsed-sidenav]="!isExpanded" [mode]="mode"
-        opened="true" (mouseenter)="mouseenter()" (mouseleave)="mouseleave()">
-        <div class="contextual-menu-container">
-          <app-contextual-menu [haveAdminPageAccess]="haveAdminPageAccess" [expanded]="isExpanded">
-          </app-contextual-menu>
+<div
+    class="pacman-logged-in-section"
+    [class.is-offine]="isOffline"
+    [ngStyle]="theme !== undefined && { 'background-image': 'url(' + theme.bg + ')' }"
+>
+    <section class="post-login-body" [@mainRouterTransition]="getState(o)">
+        <app-header></app-header>
+        <button
+            class="sidenav-expander flex flex-center"
+            mat-button
+            (click)="sidenavExpanderClicked()"
+            [ngStyle]="{ 'left.px': sidenavExpanderLeft, transform: rotationVar }"
+        >
+            <img src="/assets/icons/Path.svg" />
+        </button>
+        <mat-sidenav-container autosize [hasBackdrop]="false">
+            <mat-sidenav
+                #sidenav
+                [class.expanded-sidenav]="isExpanded"
+                [class.collapsed-sidenav]="!isExpanded"
+                [mode]="mode"
+                opened="true"
+                (mouseenter)="mouseenter()"
+                (mouseleave)="mouseleave()"
+            >
+                <div class="contextual-menu-container">
+                    <app-contextual-menu
+                        [haveAdminPageAccess]="haveAdminPageAccess"
+                        [expanded]="isExpanded"
+                    >
+                    </app-contextual-menu>
+                </div>
+            </mat-sidenav>
+            <mat-sidenav-content>
+                <div class="contextual-content-container" [appScrollTracker]="'main-sidenav'">
+                    <router-outlet #o="outlet" (deactivate)="onDeactivate($event)"></router-outlet>
+                </div>
+            </mat-sidenav-content>
+        </mat-sidenav-container>
+    </section>
+    <div
+        class="next-level-routing-container"
+        [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }"
+    >
+        <a
+            class="nextLevel-close layer-delete-title show-cross"
+            (click)="navigateBackToRootLevel()"
+        >
+            <img class="layer-delete-icon" src="../../assets/icons/x-icon.svg" />
+        </a>
+        <div class="opaque-layer">
+            <div class="full-page-overlay"></div>
         </div>
-      </mat-sidenav>
-      <mat-sidenav-content>
-        <div class="contextual-content-container">
-          <router-outlet #o="outlet" (deactivate)="onDeactivate($event)"></router-outlet>
+        <div class="top-layer-page">
+            <router-outlet name="details" #details="outlet"></router-outlet>
         </div>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  </section>
-  <div class="next-level-routing-container" [ngClass]="{ active: details.isActivated, inactive: !details.isActivated }">
-    <a class="nextLevel-close layer-delete-title show-cross" (click)="navigateBackToRootLevel()">
-      <img class="layer-delete-icon" src="../../assets/icons/x-icon.svg" />
-    </a>
-    <div class="opaque-layer">
-      <div class="full-page-overlay"></div>
     </div>
-    <div class="top-layer-page">
-      <router-outlet name="details" #details="outlet"></router-outlet>
-    </div>
-  </div>
 </div>
 <router-outlet name="modalBGMenu"></router-outlet>
 <router-outlet name="kydModal"></router-outlet>
@@ -53,9 +76,5 @@
 <router-outlet name="modal"></router-outlet>
 <app-toast-notification></app-toast-notification>
 <div [class.hide]="!showPacLoader.length" class="pacman-anim">
-  <img src="../assets/icons/Download-active.svg" />
+    <img src="../assets/icons/Download-active.svg" />
 </div>
-<img src="/assets/images/bg/background.png" width="0px" height="0px" class="hide" />
-<img src="/assets/images/bg/bg-domain3.png" width="0px" height="0px" class="hide" />
-<img src="/assets/images/bg/bg-domain2.png" width="0px" height="0px" class="hide" />
-<img src="/assets/images/bg/bg-domain1.png" width="0px" height="0px" class="hide" />
