--- a/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="asset-list">
+                    <div class="asset-list" [appScrollTracker]="'asset-list'">
                         <div
                             class="column-wrapper"
                             *ngFor="
