feat(numbers-formatting): asset distribution

--- a/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-distribution/asset-distribution.component.html
@@ -11,7 +11,7 @@
         <div class="flex">
             <h2 class="page-header-text">{{ pageTitle }}</h2>
             <h3 class="page-header-subtext">
-                ({{ totalAssetTypes }} Asset Types | {{ totalAssetCount }} Assets)
+                ({{ totalAssetTypes | number }} Asset Types | {{ totalAssetCount | number }} Assets)
             </h3>
         </div>
     </div>
@@ -94,7 +94,7 @@
                                 </span>
                             </div>
                             <div class="col">
-                                <span class="asset-count">{{ asset.count }}</span>
+                                <span class="asset-count">{{ asset.count | number }}</span>
                             </div>
                         </div>
                     </div>
