--- a/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.html
+++ b/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.html
@@ -119,7 +119,7 @@
         <div class="icon icon-wrapper">
             <img class="node-img" src="/assets/images/getStarted.svg" alt="" />
         </div>
-        <div class="app-wrapper" [class.isCollapsed]="!expanded">
+        <div class="app-wrapper" [class.is-collapsed]="!expanded">
             <div class="know-your-app-content">Getting Started</div>
         </div>
     </div>
