feat(violations): selectedRowIndex saved to state

--- a/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/issue-listing/issue-listing.component.html
@@ -41,6 +41,7 @@
             [onScrollDataLoader]="onScrollDataLoader"
             [rowSize]="'SM'"
             [searchQuery]="searchTxt"
+            [selectedRowIndex]="selectedRowIndex"
             [showAddRemoveCol]="true"
             [showDownloadBtn]="showDownloadBtn"
             [showFilterBtn]="showFilterBtn"
