feat(compliance-dashboard): initial drag & drop functionality

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -1,6 +1,13 @@
-<div class="container-wrapper">
-    <div class="container-1">
+<div
+    class="container-wrapper"
+    cdkDropList
+    [cdkDropListData]="dashboardContainers"
+    (cdkDropListDropped)="dropDashboardItem($event)"
+>
+    <div [class]="'container-' + (item + 1)" *ngFor="let item of dashboardContainers" cdkDrag>
+        <!-- Violation Tiles -->
         <mat-grid-list
+            *ngIf="item === 0"
             [cols]="breakpoint1"
             rowHeight="186px"
             gutterSize="20px"
@@ -13,9 +20,11 @@
                 ></app-violations-card>
             </mat-grid-tile>
         </mat-grid-list>
-    </div>
-    <div class="container-2">
+        <!--./Violation Tiles -->
+
+        <!-- Category & Violations by Severity -->
         <mat-grid-list
+            *ngIf="item === 1"
             [cols]="breakpoint2"
             rowHeight="396px"
             gutterSize="20px"
@@ -36,9 +45,11 @@
                 ></app-card>
             </mat-grid-tile>
         </mat-grid-list>
-    </div>
-    <div class="container-3">
+        <!--./Category & Violations by Severity -->
+
+        <!-- Asset Chart -->
         <mat-grid-list
+            *ngIf="item === 2"
             [cols]="breakpoint3"
             rowHeight="530px"
             gutterSize="20px"
@@ -53,9 +64,10 @@
                 ></app-card>
             </mat-grid-tile>
         </mat-grid-list>
-    </div>
-    <div class="container-4" (window:resize)="onresize($event)">
-        <mat-grid-list [cols]="breakpoint4" rowHeight="504px">
+        <!--./Asset Chart -->
+
+        <!-- Compliance Overview Table -->
+        <mat-grid-list *ngIf="item === 3" [cols]="breakpoint4" rowHeight="504px">
             <mat-grid-tile style="background-color: var(--background-white)">
                 <app-table
                     style="height: 100%; width: 100%"
@@ -90,5 +102,6 @@
                 </app-table>
             </mat-grid-tile>
         </mat-grid-list>
+        <!--./Compliance Overview Table -->
     </div>
 </div>
