fix(compliance-dashboard): items gap

--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.html
@@ -1,5 +1,5 @@
 <div
-    class="container-wrapper"
+    class="container-wrapper gap-24 flex flex-col"
     cdkDropList
     [cdkDropListData]="dashboardContainers"
     (cdkDropListDropped)="dropDashboardItem($event)"
