--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
@@ -100,6 +100,10 @@ mat-grid-tile {
     display: none;
 }
 
+.container.collapsed .collapse-btn {
+    right: 50%;
+}
+
 .container-title-collapsed {
     font: var(--text-body-2);
     padding: 16px 24px;
